--- a/src/components/tag/tag.module.css
+++ b/src/components/tag/tag.module.css
@@ -7,6 +7,7 @@
 }
 
 .removeButton {
+	color: currentColor;
 	background-color: transparent;
 	border: none;
 	border-radius: inherit;
